--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <img src="https://thumbs.gfycat.com/RadiantHeavenlyAdouri-mobile.jpg"alt="A picture of delicious Galbi" width="400" height="300">
     <h2>
         <a href = "pages/galbipage.html">click link</a>  
+        Thanks
     </h2>
 </body>
 
